feat: export session
